--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="home_img">
                             <div class="image">
-                                <img src="image/Second.jpg"alt="" width="400" height="300" >
+                                <img src="image/second.jpg"alt="" width="400" height="300" >
                             </div>
                         </div>
                         <div class="home_data">
